<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassphraseActivity">

    <TextView
        android:id="@+id/phassActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#C4DFEC"
        android:text="@string/enter_your_passphrase"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/phassphraseEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phassphraseEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginBottom="152dp"
        android:autofillHints=""
        android:background="#C4DFEC"
        android:ems="10"
        android:hint="@string/enter_your_pin"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/passphraseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phassActivityTitle" />

    <Button
        android:id="@+id/passphraseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phassphraseEntry" />
</androidx.constraintlayout.widget.ConstraintLayout>